--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -26,6 +26,11 @@ button {
     padding: 0.25rem 1.5rem;
     font-size: 1rem;
   }
+  &.medium {
+    border-width: 2px;
+    padding: 0.9rem 1.5rem;
+    font-size: 1rem;
+  }
 }
 
 .btn-outline {
